@@ -1,4 +1,4 @@
-{capture assign=debug_output}
+{capture name='_smarty_debug' assign=debug_output}
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
